make number of snapshots to keep configurable

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ RESTIC_REPOSITORY=s3:https://restic.server1.example.com/server1/laptop
 AWS_ACCESS_KEY_ID=server1
 AWS_SECRET_ACCESS_KEY=S3_AUTH_KEY
 RESTIC_PASSWORD=ENCRYPTION_KEY
+
+RESTIC_KEEP_DAILY=7
+RESTIC_KEEP_WEEKLY=4
+RESTIC_KEEP_MONTHLY=12
+RESTIC_KEEP_YEARLY=3
